# python-webcolors

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: changelog.rst  colors.rst  conf.py  conformance.rst  contents.rst  conventions.rst  faq.rst  index.rst  install.rst  requirements.txt  spelling_wordlist.txt
src/webcolors/: __init__.py  _conversion.py  _definitions.py  _html5.py  _normalization.py  _types.py
tests/: definitions.py  full_colors.py  test_conformance.py  test_conversion.py  test_html5.py  test_normalization.py
